<resources>
    <string name="app_name">Whatsapp</string>

    <string name="Verify">Verify your Number</string>
    <string name="VerifyDescription">Please enter your Country Code and \n Phone number for verification</string>

    <string name="BrazilCountry">+55</string>
    <string name="logoDescription">Logo WhatsApp</string>

    <string name="OTP">Enter OTP</string>
    <string name="OTPDescription">We have sent you an OTP for \n phone number verification</string>
    <string name="OTPVerify">Verify OTP</string>
    <string name="OTPGenerate">Generate OTP</string>

    <string name="LoginHintNumber">Your number</string>
    <string name="OtpHintNumber">Your OTP code</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="defaulName">Name</string>
    <string name="defaultSettingName">This is not your username or pin. This name will \n be visible to your WhatsApp contacts.</string>
    <string name="defaulStatus">I am available</string>
    <string name="defaultStatusHint">Status</string>
    <string name="defaultPhone">Phone</string>

    <string name="dataName">Your name</string>
    <string name="dataButton">Confirm</string>
    <string name="dataTextView">Please write your Username</string>
    <string name="todo">TODO</string>
    <string name="title_activity_chat">ChatActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="registerNewGroup">Type group subject here...</string>
    <string name="defaultTextViewRegisterNewGroup">Provide a group subject and optional group icon</string>

    <string name="default_notification_channel_id">fcm_default_channel</string>

</resources>
